--- a/sass/main.scss
+++ b/sass/main.scss
@@ -128,6 +128,11 @@ blockquote {
         display: flex;
         flex-wrap: wrap;
     }
+    
+    .card__profile {
+        position: relative;
+        z-index: 30;
+    }
 }
 
 
